# recon-mailing

./: .gitignore  main.py  pyproject.toml
.streamlit/: config.toml
data/: BD 25.2 sheet 2.csv  BD 25.2.csv
engine/: __init__.py  data_loader.py  email_generator.py  models.py  prompts.py  research.py
